--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 body {
   background-color: black;
   color: white;
@@ -11,15 +18,31 @@ button {
 }
 #formSubmissionBtn {
   font-size: 20px;
+  border-radius: 10px;
+  padding: 0px 10px;
+}
+#formSubmissionBtn:hover {
+  background-color: rgba(170, 170, 170, 0.883);
 }
 
 #startButtonDiv {
   display: flex;
   justify-content: center;
 }
+#startButton {
+  background-color: white;
+  font-size: 50px;
+  border-radius: 10px;
+  padding: 5px 30px;
+}
+#startButton:hover {
+  background-color: rgba(170, 170, 170, 0.883);
+}
 
 #questionCardDiv {
-  display: flex;
+  background-image: linear-gradient(to bottom right, deepskyblue, black);
+  border-radius: 10px;
+  padding: 10px 50px;
 }
 #answerList {
   display: flex;
@@ -29,10 +52,33 @@ button {
   list-style-type: none;
   padding: 0;
 }
+#answerList button {
+  background-color: white;
+  border-radius: 10px;
+  padding: 5px 30px;
+}
+#answerList button:hover {
+  background-color: rgba(170, 170, 170, 0.883);
+}
 
 #finalScoreDiv h2 {
   display: flex;
   justify-content: center;
+}
+#leaderboardDiv {
+  margin-top: 10px;
+}
+#leaderboardDiv button {
+  background-color: white;
+  border-radius: 5px;
+}
+#leaderboardDiv button:hover {
+  background-color: rgba(170, 170, 170, 0.883);
+}
+#leaderboardDiv h2 {
+  background-image: linear-gradient(to bottom right, black, silver, black);
+  padding: 20px 20px;
+  border-radius: 5px;
 }
 #leaderboardList {
   list-style-type: none;
@@ -40,7 +86,10 @@ button {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0;
+  padding: 0 0 5px 0;
+  margin-bottom: 10px;
+  background-color: rgba(178, 34, 34, 0.616);
+  border-radius: 10px;
 }
 #leaderboardDiv h2 {
   display: flex;
@@ -48,21 +97,15 @@ button {
   justify-content: center;
   align-items: center;
 }
-main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
 
 .wrong {
-  background-color: red;
+  background-color: rgba(255, 0, 0, 0.6);
   font-size: 30px;
   border-radius: 10px;
   padding: 5px 50px;
 }
 .right {
-  background-color: green;
+  background-color: rgba(0, 128, 0, 0.6);
   font-size: 30px;
   border-radius: 10px;
   padding: 5px 50px;
