--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ button {
   background-color: white;
   border-radius: 10px;
   padding: 5px 30px;
+  margin: 10px 0px;
 }
 #answerList button:hover {
   background-color: rgba(170, 170, 170, 0.883);
